force-app/main/default/objects/Mailtemplate_account__c/Mailtemplate_account__c.object-meta.xml
<CustomObject>
    <label>Mailtemplate account</label>
    <nameField>
        <label>Mailtemplate account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailtemplates accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>