force-app/main/default/objects/Mailtemplate_account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mailtemplates accounts</relationshipLabel>
    <relationshipName>Mailtemplates_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>