force-app/main/default/objects/Mailtemplate_account__c/fields/Mailtemplate__c.field-meta.xml
<CustomField>
    <fullName>Mailtemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailtemplate</label>
    <referenceTo>Mailtemplate__c</referenceTo>
    <relationshipLabel>Mailtemplates accounts</relationshipLabel>
    <relationshipName>Mailtemplates_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>