force-app/main/default/objects/Mailtemplate_account__c/fields/Type_of_mail__c.field-meta.xml
<CustomField>
    <fullName>Type_of_mail__c</fullName>
    <label>Type of mail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome_email</fullName>
                <label>Welcome email</label>
            </value>
            <value>
                <fullName>Distribution_email</fullName>
                <label>Distribution email</label>
            </value>
            <value>
                <fullName>Application rejection email to vendor</fullName>
            </value>
            <value>
                <fullName>Application to manager mail</fullName>
            </value>
            <value>
                <fullName>Position rejection email</fullName>
            </value>
            <value>
                <fullName>Position to hiring desk</fullName>
            </value>
            <value>
                <fullName>Intake confirmation</fullName>
            </value>
            <value>
                <fullName>Application confirmation to hiring desk</fullName>
            </value>
            <value>
                <fullName>Application rejection email</fullName>
                <isActive>false</isActive>
                <label>Application rejection email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>