force-app/main/default/objects/Mailtemplate_account__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>NAME</columns>
    <columns>Mailtemplate__c</columns>
    <columns>Type_of_mail__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>